--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-	#<meta charset="utf-8""#>
+	<meta charset="utf-8">
 	<title>Travels</title>
 	<meta name="description" content="">
 	<link rel="stylesheet" href="css/app.css">
